# api

./: .gitignore  .gitmodules  pyproject.toml
xfu_api/: main.py
xfu_api/routers/: devices.py
