[tool.poetry]
name = "xfu_api"
version = "0.1.0"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
