[tool.poetry]
name = "xfu_api"
version = "0.1.0"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
