[tool.poetry]
name = "xfu_api"
version = "0.1.0"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.101.1"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
